<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    displayName="@string/extension_name"
    icon="@drawable/crosshair"
    id="squadrating"
    scansDevices="false"
    mapLayer="true"
    fitFile="true">

    <DataType
        description="@string/quad_squadrats_description"
        displayName="@string/quad_squadrats"
        graphical="true"
        icon="@drawable/squadrat"
        typeId="quad_squadrats" />

    <DataType
        description="@string/quad_yard_description"
        displayName="@string/quad_yard"
        graphical="true"
        icon="@drawable/yard"
        typeId="quad_yard" />

    <DataType
        description="@string/quad_uber_description"
        displayName="@string/quad_uber"
        graphical="true"
        icon="@drawable/ubersquadrat"
        typeId="quad_uber" />

    <DataType
        description="@string/quad_yard_uber_description"
        displayName="@string/quad_yard_uber"
        graphical="true"
        icon="@drawable/yard"
        typeId="quad_yard_uber" />

    <DataType
        description="@string/dual_time_description"
        displayName="@string/dual_time"
        graphical="true"
        icon="@drawable/time"
        typeId="dual_time" />

    <DataType
        description="@string/dual_ride_time_description"
        displayName="@string/dual_ride_time"
        graphical="true"
        icon="@drawable/time"
        typeId="dual_ride_time" />

    <DataType
        description="@string/dual_ride_summary_description"
        displayName="@string/dual_ride_summary"
        graphical="true"
        icon="@drawable/trip"
        typeId="dual_ride_summary" />

    <DataType
        description="@string/dual_trip_description"
        displayName="@string/dual_trip"
        graphical="true"
        icon="@drawable/trip"
        typeId="dual_trip" />

    <DataType
        description="@string/dual_alltime_description"
        displayName="@string/dual_alltime"
        graphical="true"
        icon="@drawable/been_here"
        typeId="dual_alltime" />

    <DataType
        description="@string/explored_squadrats_description"
        displayName="@string/explored_squadrats"
        graphical="false"
        icon="@drawable/been_here"
        typeId="explored_squadrats" />

    <DataType
        description="@string/explored_new_squadrats_trip_description"
        displayName="@string/explored_new_squadrats_trip"
        graphical="false"
        icon="@drawable/location_plus"
        typeId="explored_new_squadrats_trip" />

    <DataType
        description="@string/explored_squadrats_trip_description"
        displayName="@string/explored_squadrats_trip"
        graphical="false"
        icon="@drawable/trip"
        typeId="explored_squadrats_trip" />

    <DataType
        description="@string/ubersquadrat_size_description"
        displayName="@string/ubersquadrat_size"
        graphical="false"
        icon="@drawable/area"
        typeId="ubersquadrat_size" />
</ExtensionInfo>
